# ChatConnect-Dashboard

./: .env  .env.example  .replit  Dockerfile  Dockerfile.dev  NEXT_SESSION_CONTEXT.md  README.md  design_guidelines.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.clinerules/: CLINE_CUSTOM_INSTRUCTIONS.md  cline-system-instructions.md  clinerules
ai-backend/: Dockerfile  Dockerfile.dev  README.md  pyproject.toml
ai-backend/src/api/: main.py  routes.py
ai-backend/src/config/: settings.py
ai-backend/src/models/: requests.py  responses.py
attached_assets/: Pasted-Create-a-clean-modern-SaaS-dashboard-mockup-for-a-conference-chat-widget-configuration-platform-Us-1760778707973_1760778707973.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: activity-feed.tsx  analytics-charts.tsx  app-sidebar.tsx  code-block.tsx  color-picker.tsx  document-list.tsx  file-upload.tsx  setup-progress.tsx  stats-card.tsx  tag-badge.tsx  tag-prompt-section.tsx  tag-selector-dialog.tsx  time-range-selector.tsx  widget-preview.tsx
client/src/hooks/: use-auth.tsx
client/src/pages/: analytics.tsx  login.tsx  (+4 more)
docs/: ARCHITECTURE.md  BACKEND_SETUP_GUIDE.md  BILLING_AND_LIMITS.md  DATABASE_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_READINESS.md  DEVELOPMENT.md  GETTING_STARTED.md  MIGRATION_COMPLETE.md  MULTI_TENANT_SCHEMA_PLAN.md  README.md  TESTING_CHECKLIST.md  WIDGET_API_IMPLEMENTATION_PLAN.md  WIDGET_API_README.md  WIDGET_IMPLEMENTATION.md
docs/archive/: ARCHITECTURE_old.md  IMPLEMENTATION_AUDIT.md  IMPLEMENTATION_FOLDER_STRUCTURE.md
docs/implementation/: HUMAN_REVIEW_GUIDE.md  PYTHON_BACKEND_INTEGRATION_TASKS.md  TASKS.md  WIDGET_LIGHT_BACKEND_TASKS.md
public/: widget-test.html
server/: index.ts  routes.ts  storage.ts
server/middleware/: auth.ts  widget-auth.ts
server/routes/: auth-routes.ts  dashboard-routes.ts  widget-routes-v2.ts  widget-routes.ts  widget-serve.ts
server/services/: python-backend.ts
shared/: python-backend-types.ts  schema-v2.ts  schema.ts
(+17 files in other folders)
